# SD6123-PPML

./: .gitignore  README.md  fedavg.py  fedavg_MIA.py  fedavg_dp_MIA.py  fedavg_opacus_MIA.py  fedditto.py  fedditto_MIA.py  fedditto_dp_MIA.py  fedditto_opacus_MIA.py  fedprox.py  fedprox_MIA.py  fedprox_dp_MIA.py  fedprox_opacus_MIA.py  local.py  pyproject.toml  requirements.txt  run_dp_mia.sh  run_experiments.sh  run_mia.sh  run_opacus_dp_mia.sh  visualize_mia_results.ipynb
models/: cnn.py
result/fedavg/: cifar10_iid.jsonl  cifar10_shard.jsonl  mnist_iid.jsonl  mnist_shard.jsonl
result/fedditto/: cifar10_iid.jsonl  cifar10_shard.jsonl  mnist_iid.jsonl  mnist_shard.jsonl
result/fedprox/: cifar10_iid.jsonl  cifar10_shard.jsonl  mnist_iid.jsonl  mnist_shard.jsonl
result/local/: cifar10_iid.jsonl  cifar10_shard.jsonl  mnist_iid.jsonl  mnist_shard.jsonl
utils/: __init__.py  client.py  clientditto.py  clientprox.py  data_utils.py  dp.py  json_utils.py  mia_utils.py  opacus_client.py  opacus_clientditto.py  opacus_clientprox.py  opacus_dp.py  training.py
utils/optimizer/: __init__.py  fedprox.py
